# text_utilities

./: Cargo.toml  README.md  hi.txt
2/: diff-0-1-cc19.txt  diff-0-2-cc0.txt  diff-0-3-cc0.txt  diff-0-4-cc18.txt  diff-1-2-cc19.txt  diff-1-3-cc19.txt  diff-1-4-cc19.txt  diff-2-3-cc0.txt  diff-2-4-cc18.txt  diff-3-4-cc18.txt
src/common/: compare_files.rs  composecscfunctions.rs  composecsfunctions.rs  count_lines.rs  cscfunctions.rs  cscmaptopower.rs  csextfunctions.rs  csfunctions.rs  csmaptopower.rs  cygwin.rs  diff_all.rs  diffall.rs  file_information.rs  getline.rs  input_from_file.rs  interval.rs  lib.rs  only_multidiff.rs  passyaml.rs  string_to_vecstring.rs  two_strings.rs
test_data/: test_file.txt
