[package]
name = "text_utilities"
version = "0.1.0"
edition = "2021"
authors = ["mstankus <mstankus@gmail.com>"]

[[bin]]
name = "modifyfile"
path = "src/bin/modifyfile.rs"

[[bin]]
name = "multidiff"
path = "src/bin/multidiff.rs"

[[bin]]
name = "multiremover"
path = "src/bin/multiremover.rs"

[lib]
name = "common"
path = "src/common/lib.rs"


[dependencies]
chrono = "0.4.37"
file_diff = "1.0.0"
filetime_creation = "0.2.0"
glob = "0.3.1"
md5 = "0.7.0"
multimap = "0.10.0"
